--- a/Changes
+++ b/Changes
@@ -1,5 +1,20 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.04     2011-07-19
+
+         [INCOMPATIBLE CHANGES]
+
+         - enum_id_workdays() (and count_id_workdays()) now accepts 'start_date'
+           and 'end_date' arguments instead of 'year'/'mon', to be more flexible
+           (list_id_holidays() should probably do too, but this requires
+           enhancements to Sub::Spec::Gen::ReadTable first).
+
+         [FIXES]
+
+         - Calendar::ID::Holiday alias module previously couldn't export
+           functions.
+
+
 0.03     2011-07-10
 
          [ENHANCEMENTS]
