--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.05     2011-10-05
+
+         Fix some calendar mistakes, add holidays from 2002-2007.
+
+
 0.04     2011-07-19
 
          [INCOMPATIBLE CHANGES]
