--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.06     2011-12-14
+
+         No library changes. Add command-line script.
+
+
 0.05     2011-10-05
 
          Fix some calendar mistakes, add holidays from 2002-2007.
