--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.07     2011-12-14
+
+         No functionality changes.
+
+         [INCOMPATIBLE CHANGES]
+
+         - Column 'id_name' becomes 'ind_name', 'en_name' becomes 'eng_name'.
+           Sorry. The use of 'id' for 'Indonesian' is easily confused with
+           'identifier'.
+
+
 0.06     2011-12-14
 
          No library changes. Add command-line script.
