--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.08     2012-03-22
+
+         No functional changes. Update to Perinci::Sub::Gen::AccessTable 0.08.
+
+
 0.07     2011-12-14
 
          No functionality changes.
