--- a/Changes
+++ b/Changes
@@ -1,16 +1,21 @@
 Revision history for Calendar-Indonesia-Holiday
 
-0.09     2012-06-04
+0.10     2012-07-11 (SHARYANTO)
 
-         No functional changes. Update to Perinci::Sub::Gen::AccessTable 0.11g.
+         No functional changes. Update to Perinci::Sub::Gen::AccessTable 0.14.
 
 
-0.08     2012-03-22
+0.09     2012-06-04 (SHARYANTO)
+
+         No functional changes. Update to Perinci::Sub::Gen::AccessTable 0.11.
+
+
+0.08     2012-03-22 (SHARYANTO)
 
          No functional changes. Update to Perinci::Sub::Gen::AccessTable 0.08.
 
 
-0.07     2011-12-14
+0.07     2011-12-14 (SHARYANTO)
 
          No functionality changes.
 
@@ -21,17 +26,17 @@ Revision history for Calendar-Indonesia-Holiday
            'identifier'.
 
 
-0.06     2011-12-14
+0.06     2011-12-14 (SHARYANTO)
 
          No library changes. Add command-line script.
 
 
-0.05     2011-10-05
+0.05     2011-10-05 (SHARYANTO)
 
          Fix some calendar mistakes, add holidays from 2002-2007.
 
 
-0.04     2011-07-19
+0.04     2011-07-19 (SHARYANTO)
 
          [INCOMPATIBLE CHANGES]
 
@@ -46,14 +51,14 @@ Revision history for Calendar-Indonesia-Holiday
            functions.
 
 
-0.03     2011-07-10
+0.03     2011-07-10 (SHARYANTO)
 
          [ENHANCEMENTS]
 
          - Add alias Calendar::ID::Holiday
 
 
-0.02     2011-06-30
+0.02     2011-06-30 (SHARYANTO)
 
          [ENHANCEMENTS]
 
@@ -62,6 +67,6 @@ Revision history for Calendar-Indonesia-Holiday
          - (documentation) Add FAQ.
 
 
-0.01     2011-06-14
+0.01     2011-06-14 (SHARYANTO)
 
          First release.
