--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Calendar-Indonesia-Holiday
 
-0.14     2013-08-27 (SHARYANTO) (not yet released)
+0.14     2013-08-27 (SHARYANTO)
 
          - Update data: 2014 holidays (official, decreed Aug 21st).
 
