--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.18     2014-04-16 (SHARYANTO)
+
+         - Change wording of Pemilu -> Pemilu Legislatif, Pilpres -> Pemilu
+           Presiden.
+
+
 0.17     2014-04-08 (SHARYANTO)
 
          [INCOMPATIBLE CHANGES]
