--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.19     2014-04-24 (SHARYANTO)
+
+         - bin/list-id-holidays: Experiment with Text::ANSITable's style set.
+
+
 0.18     2014-04-16 (SHARYANTO)
 
          - Change wording of Pemilu -> Pemilu Legislatif, Pilpres -> Pemilu
