--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.20     2014-06-26 (SHARYANTO)
+
+         - Add script: list-id-workdays.
+
+
 0.19     2014-04-24 (SHARYANTO)
 
          - bin/list-id-holidays: Experiment with Text::ANSITable's style set.
