--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.22     2014-08-06 (SHARYANTO)
+
+         - Update data: 2015 holidays (official, decreed May 7th, so I'm a bit
+           late).
+
+
 0.21     2014-07-02 (SHARYANTO)
 
          - No functional changes.
