--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.26    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.25    2015-07-25 (PERLANCAR)
 
 	- Update with official 2016 holidays (Isra Miraj is May 6th not
