--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.27    2015-12-09 (PERLANCAR)
+
+	- Add 2015 holiday: Pilkada Serentak (2015-12-09).
+
+
 0.26    2015-09-03 (PERLANCAR)
 
 	- No functional changes.
