--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Calendar-Indonesia-Holiday
 
+0.28    2016-04-23 (PERLANCAR)
+
+	- Add official holidays of 2017.
+
+
 0.27    2015-12-09 (PERLANCAR)
 
 	- Add 2015 holiday: Pilkada Serentak (2015-12-09).
