--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.29    2017-05-29 (PERLANCAR)
+
+	- Add Pancasila Day (June 1) as a holiday from 2017.
+
+
 0.28    2016-04-23 (PERLANCAR)
 
 	- Add official holidays of 2017.
