--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.31    2017-07-31 (PERLANCAR)
+
+	- Add holidays for 2018 (tentative, draft, guess).
+
+
 0.30    2017-06-20 (PERLANCAR)
 
 	- Add joint leave on 2017-06-23 (ref: Keppres 18/2017 on
