--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.320   2017-12-04 (PERLANCAR)
+
+	- Updates for official 2018 holidays (Nyepi Mar 18 -> Mar 17, Isra
+	  Miraj Apr 13 -> Apr 14, Hijra Sep 12 -> Sep 11, joint leave +Jun
+	  13, -Jun 20).
+
+
 0.31    2017-07-31 (PERLANCAR)
 
 	- Add holidays for 2018 (tentative, draft, guess).
