--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.321   2018-06-26 (PERLANCAR)
+
+	- Add 2018 holiday: Jun 27 declared as national holiday on Jun 25.
+
+
 0.320   2017-12-04 (PERLANCAR)
 
 	- Updates for official 2018 holidays (Nyepi Mar 18 -> Mar 17, Isra
