--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.322   2018-10-16 (PERLANCAR)
+
+	- Add tentative 2019 holidays.
+
+	- Fixed joint leave days for 2018.
+
+
 0.321   2018-06-26 (PERLANCAR)
 
 	- Add 2018 holiday: Jun 27 declared as national holiday on Jun 25.
