--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.323   2018-12-04 (PERLANCAR)
+
+	- Add official 2019 holidays (16 days + 4 joint leave days).
+
+
 0.322   2018-10-16 (PERLANCAR)
 
 	- Add tentative 2019 holidays.
