--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.324   2019-11-19  Released-By: PERLANCAR; Urgency: medium
+
+	- Add official 2020 holidays (16 + 4 joint leave).
+
+	- Fix typo in Eidul Fitr 2019.
+
+
 0.323   2018-12-04  Released-By: PERLANCAR
 
 	- Add official 2019 holidays (16 days + 4 joint leave days).
