--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.325   2020-07-30  Released-By: PERLANCAR; Urgency: medium
+
+	- Revise joint leaves of 2020.
+
+
 0.324   2019-11-19  Released-By: PERLANCAR; Urgency: medium
 
 	- Add official 2020 holidays (16 + 4 joint leave).
