--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.326   2020-08-18  Released-By: PERLANCAR; Urgency: high
+
+	- [bugfix] Fix joint leave dates 28 Oct, 30 Oct (Mawlid).
+
+
 0.325   2020-07-30  Released-By: PERLANCAR; Urgency: medium
 
 	- Revise joint leaves of 2020.
