--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.327   2020-11-17  Released-By: PERLANCAR; Urgency: medium
+
+	- Add 2021 holidays.
+
+
 0.326   2020-08-18  Released-By: PERLANCAR; Urgency: high
 
 	- [bugfix] Fix joint leave dates 28 Oct, 30 Oct (Mawlid).
