--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.328   2020-12-03  Released-By: PERLANCAR; Urgency: medium
+
+	- Update 2020 holidays (3 joint leave days in Dec removed to
+	  prevent spreading of coronavirus, decreed Dec 1).
+
+
 0.327   2020-11-17  Released-By: PERLANCAR; Urgency: medium
 
 	- Add 2021 holidays.
