--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.329   2020-12-04  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- Refer to the official SKB in the comment.
+
+
 0.328   2020-12-03  Released-By: PERLANCAR; Urgency: medium
 
 	- Update 2020 holidays (3 joint leave days in Dec removed to
