--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.330   2020-12-08  Released-By: PERLANCAR; Urgency: medium
+
+	- Update 2020 holidays (add joint regional election/pilkada
+	  serentak on dec 9th, decreed nov 27th).
+
+
 0.329   2020-12-04  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
@@ -281,4 +287,3 @@
 0.01     2011-06-14  Released-By: SHARYANTO
 
          - First release.
-
