--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.331   2021-01-13  Released-By: PERLANCAR; Urgency: medium
+
+	- Add function: is_id_holiday().
+
+
 0.330   2020-12-08  Released-By: PERLANCAR; Urgency: medium
 
 	- Update 2020 holidays (add joint regional election/pilkada
