--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.332   2021-01-13  Released-By: PERLANCAR; Urgency: medium
+
+	- [bugfix] is_id_holiday(): Forgot to put Rinci metadata for
+	  argument 'include_joint_leave'.
+
+
 0.331   2021-01-13  Released-By: PERLANCAR; Urgency: medium
 
 	- Add function: is_id_holiday().
