--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.336   2021-03-07  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [ux] Add Abstract for list_idn_workdays().
+
+
 0.335   2021-01-16  Released-By: PERLANCAR; Urgency: medium
 
         - Rename functions (_id_ infix to _idn_ for less ambiguity), old
