--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.337   2021-03-09  Released-By: PERLANCAR; Urgency: medium
+
+	- Revise joint leave days for 2021 (reduced from 7 to 2).
+
+
 0.336   2021-03-07  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
