--- a/Changes
+++ b/Changes
@@ -1,3 +1,18 @@
+0.338   2021-03-09  Released-By: PERLANCAR; Urgency: medium; Backward-Incompatible: yes
+
+	[INCOMPATIBLE CHANGES]
+
+	- Rename enum_idn_workdays() to list_idn_workdays() for consistency;
+	  Fix/tweak examples in Synopsi sand description.
+
+        - Remove support for old deprecated names: list_id_holidays(),
+	  count_id_workdays(), is_id_holiday().
+
+        [ENHANCEMENTS]
+
+	- Add function: is_idn_workday().
+
+
 0.337   2021-03-09  Released-By: PERLANCAR; Urgency: medium
 
 	- Revise joint leave days for 2021 (reduced from 7 to 2).
