--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.339   2021-03-09  Released-By: PERLANCAR; Urgency: low
+
+	- [doc] Add FAQ item.
+
+	- [ux] list_idn_workdays(): tweak argument metadata for CLI
+	  convenience.
+
+
 0.338   2021-03-09  Released-By: PERLANCAR; Urgency: medium; Backward-Incompatible: yes
 
 	[INCOMPATIBLE CHANGES]
