--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.340   2021-04-12  Released-By: PERLANCAR; Urgency: low
+
+	- [bugfix] Fix typo: May 14 2021 is day 2 of Eid Ul-Fitr, not day 1.
+
+
 0.339   2021-03-09  Released-By: PERLANCAR; Urgency: low
 
 	- [doc] Add FAQ item.
