--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.342   2021-11-15  Released-By: PERLANCAR; Urgency: medium
+
+	- Revise holidays 2021 (jun 18 decree).
+
+
 0.341   2021-05-12  Released-By: PERLANCAR; Urgency: medium
 
 	- [bugfix] Fix clash between --query and --year (both specified
