--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.343   2021-11-15  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Expand on a developer note.
+
+
 0.342   2021-11-15  Released-By: PERLANCAR; Urgency: medium
 
 	- Revise holidays 2021 (jun 18 decree).
