--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.344   2021-11-16  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Add note & caveat in Description.
+
+	- [doc] Update script name in Description.
+
+
 0.343   2021-11-15  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
