--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.345   2022-01-10  Released-By: PERLANCAR; Urgency: medium
+
+	- Add 2022 holidays.
+
+
 0.344   2021-11-16  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
