--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.346   2022-01-10  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Document the calendar years supported by this module in the
+	  POD.
+
+
 0.345   2022-01-10  Released-By: PERLANCAR; Urgency: medium
 
 	- Add 2022 holidays.
