--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.347   2022-07-05  Released-By: PERLANCAR; Urgency: medium
+
+        - Change Eid Al-Adha 2022 from Jul 9 to Jul 10.
+
+
 0.346   2022-01-10  Released-By: PERLANCAR; Urgency: low
 
 	- No functional changes.
