--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.348   2022-11-28  Released-By: PERLANCAR; Urgency: medium
+
+        - Add 2023 holidays.
+
+
 0.347   2022-07-05  Released-By: PERLANCAR; Urgency: medium
 
         - Change Eid Al-Adha 2022 from Jul 9 to Jul 10.
