--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.349   2023-04-18  Released-By: PERLANCAR; Urgency: medium
+
+        - Revise 2023 joint leave days for Eid Al-Fitr (Apr 21,24,25,26 ->
+          19,20,21,24,25).
+
+
 0.348   2022-11-28  Released-By: PERLANCAR; Urgency: medium
 
         - Add 2023 holidays.
