--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.350   2023-06-20  Released-By: PERLANCAR; Urgency: medium
+
+        - Revise 2023 joint leaves (add 2 joint leaves for Eidul Adha).
+
+
 0.349   2023-04-18  Released-By: PERLANCAR; Urgency: medium
 
         - Revise 2023 joint leave days for Eid Al-Fitr (Apr 21,24,25,26 ->
