--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.351   2023-07-11  Released-By: PERLANCAR; Urgency: medium
+
+        - No functional changes.
+
+        - Remove usage of smartmatch.
+
+
 0.350   2023-06-20  Released-By: PERLANCAR; Urgency: medium
 
         - Revise 2023 joint leaves (add 2 joint leaves for Eidul Adha).
