--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.352   2023-11-13  Released-By: PERLANCAR; Urgency: medium
+
+        - Add holidays for 2024.
+
+
 0.351   2023-07-11  Released-By: PERLANCAR; Urgency: medium
 
         - No functional changes.
