--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.353   2025-03-29  Released-By: PERLANCAR; Urgency: medium
+
+        - Finish adding 2015 holidays.
+
+        - Tweak holiday names to resemble SKB closely.
+
+
 0.352   2023-11-13  Released-By: PERLANCAR; Urgency: medium
 
         - Add holidays for 2024.
