--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.354   2025-08-14  Released-By: PERLANCAR; Urgency: medium
+
+        - Update: Aug 18 was added as joint leave day.
+
+
 0.353   2025-03-29  Released-By: PERLANCAR; Urgency: medium
 
         - Finish adding 2015 holidays.
