--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.355   2025-12-19  Released-By: PERLANCAR; Urgency: medium
+
+        - Add 2026 holidays.
+
+
 0.354   2025-08-14  Released-By: PERLANCAR; Urgency: medium
 
         - Update: Aug 18 was added as joint leave day.
